# Simple-Qt-video-audio-player

./: CMakeLists.txt  README.md
Simple_Video_Player/: Simple_Video_Player.pro  dialogwindow.cpp  dialogwindow.h  playerwidget.cpp  playerwidget.h  videoplayer.cpp  videoplayer.h  videowidget.h
include/: mainwindow.h  videoplayer.h
src/: mainwindow.cpp  playerwidget.cpp  videoplayer.cpp  videowidget.cpp
